# agente-traductor-subtitulos

./: .gitignore  README.md  pyproject.toml  requirements.txt  traductor-subtitulos.py
